# SocketChatter

./: .gitignore  Client.sh  README.md  Server.sh
Client/: .gitignore  CMakeLists.txt  client  client.c  clientstructure.txt  resources.qrc
Client/src/: main.cpp
Client/src/controllers/: ControllerManager.cpp  ControllerManager.h  IController.h
Client/src/controllers/auth/: AuthController.cpp  (+9 more)
Client/src/database/: DatabaseManager.cpp  DatabaseManager.h  schema.sql
Client/src/helper/: MessageSerializer.cpp  MessageSerializer.h
Client/src/models/: ContactModel.cpp  ContactModel.h  ConversationModel.cpp  ConversationModel.h
Client/src/viewmodels/: AuthViewModel.cpp  AuthViewModel.h  ContactViewModel.cpp  ContactViewModel.h  ConversationViewModel.cpp  ConversationViewModel.h  GroupViewModel.cpp  GroupViewModel.h
Client/src/views/: AuthWindow.qml  ContactPage.qml  ConversationPage.qml  MainWindow.qml  ManageContactsPage.qml  ManageGroupsPage.qml  WindowManager.cpp  WindowManager.h
Server/: .gitignore  CMakeLists.txt  Server  chatapp.db  resources.qrc  server  server.c  serverstructures.txt  test.json
Server/src/: main.cpp
Server/src/controllers/: ClientHandler.cpp  ClientHandler.h  ServerController.cpp  ServerController.h
Server/src/core/: ClientHandler.cpp  ClientHandler.h  ConnectionManager.cpp  ConnectionManager.h  RequestDispatcher.cpp  RequestDispatcher.h  ServerController.cpp  ServerController.h
Server/src/database/: DatabaseManager.cpp  DatabaseManager.h  schema.sql
Server/src/handlers/: AuthHandler.cpp  AuthHandler.h  BaseHandler.h  ContactHandler.cpp  ContactHandler.h  GroupHandler.cpp  GroupHandler.h  MessageHandler.cpp  MessageHandler.h
Server/src/network/: ProtocolHelper.cpp  ProtocolHelper.h
Server/src/repositories/: ContactRepository.cpp  ContactRepository.h  GroupRepository.cpp  GroupRepository.h  MessageRepository.cpp  MessageRepository.h  UserRepository.cpp  UserRepository.h
Server/src/threads/: ClientThread.cpp  ClientThread.h
Server/src/utils/: Logger.cpp  Logger.h  NotificationFactory.h  ResponseFactory.h  logger.h
(+58 files in other folders)
